# experimentalHMC

./: .gitignore  LICENSE  meson.build  pyproject.toml
experimentalHMC/: __init__.py  __version.py  convergence.py  dualaverage.py  f.py  inv_std_normal.cpp  inv_std_normal.h  main.cpp  metric_adapter.py  onlinemad.py  onlinemean.py  onlinemeanvar.py  onlinequantile.py  stan.py
experimentalhmc/: __init__.py  convergence.py  dual_average.py  dualaverage.py  ehmc.cpp  ehmc.py  ehmc_cpp.py  initialize_draws.py  inv_phi.cpp  inv_phi.h  leapfrog.py  main.cpp  meson.build  metric_adapter.py  normal.py  normal_rng.py  onlinemad.py  onlinemeanvar.py  onlinequantile.py  phi_inv.cpp  phi_inv.h  power_two.py  rand.py  rng.py  sbhmc.py  stan.cpp  stan.h  stan.py  step_size_adapter.py  step_size_initializer.py  windowedaptation.py  xoshiro.cpp  xoshiro.h
test/: test_convergence.py  test_dualaverage.py  test_inv_std_normal.py  test_leapfrog.py  test_metricadapter.py  test_normal_invcdf.py  test_onlinemad.py  test_onlinemeanvar.py  test_onlinequantile.py  test_rand.py  test_rngs.py  test_stan.py
test_models/bernoulli/: bernoulli.hpp
test_models/fr_gaussian/: fr_gaussian.hpp
test_models/full/: full.hpp
test_models/gaussian/: gaussian.hpp
test_models/jacobian/: jacobian.hpp
test_models/logistic/: logistic.hpp
test_models/matrix/: matrix.hpp
test_models/multi/: multi.hpp
test_models/ode/: ode.hpp
test_models/print/: print.hpp
test_models/regression/: regression.hpp
test_models/simple/: simple.hpp
test_models/simplex/: simplex.hpp
test_models/sir/: sir.data.json  sir.stan
test_models/stdnormal/: stdnormal.hpp
test_models/throw_data/: throw_data.data.json  throw_data.hpp
test_models/throw_gq/: throw_gq.hpp
test_models/throw_lp/: throw_lp.hpp
test_models/throw_tp/: throw_tp.hpp
