[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "experimentalhmc"
version = "0.0.1"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Edward Roualdes", email = "eroualdes@csuchico.edu" },
]
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools]
packages = ["experimentalhmc"]

[tool.setuptools.package-data]
"experimentalhmc" = ["py.typed"]

[project.optional-dependencies]
test = ["pandas", "pytest", "pytest-cov"]

[tool.isort]
profile = "black"
